# Chat

./: .gitignore  CMakeLists.txt  Chat.ice  Client.cpp  ServerMain.cpp
ChatClient/: Client.cpp  ClientMain.cpp  ClientMain.h  makefile
ChatServer/: ServerMain.cpp  ServerMain.h  makefile
headers/: Room.h  RoomFactory.h  Server.h  User.h
heders/: Room.h  RoomFactory.h  Server.h  User.h
sources/: Chat.cpp  Room.cpp  RoomFactory.cpp  Server.cpp  User.cpp
